# tfm-log-site

backend/: .env  Cargo.toml
backend/migrations/: 20221130222254_create_game_data.sql
backend/scripts/: run_db.sh
backend/src/: main.rs  server.rs
backend/src/db/: db_api.rs  mod.rs
backend/src/models/: game.rs
backend/src/tests/: backend.rs  db_tests.rs  mod.rs  test_parse_log.rs
frontend/: package-lock.json
