[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
serde = { version =  "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "postgres" ] }